# NQRust-Backup

./: .cmake-format.py  .gitignore  .matrix.yml  .nqrustbackup-check-sources-ignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  LICENSE.txt  README.md  SECURITY.md  SPONSORS.md  get_version.cmake  pull_request_template.md  vcpkg.json  write_version_files.cmake
cmake/: DebugEdit.cmake  FindJansson.cmake  FindLZO.cmake  FindPAM.cmake  FindReadline.cmake  FindgRPC.cmake  Findtirpc.cmake  Findutf8cpp.cmake  FindxxHash.cmake  ForceOption.cmake  NQRustBackupCcache.cmake  NQRustBackupCheckAcl.cmake  NQRustBackupCheckChflags.cmake  NQRustBackupCheckXattr.cmake  NQRustBackupConfigureFile.cmake  NQRustBackupCpmPackages.cmake  NQRustBackupDisableWarnings.cmake  (+15 more)
contrib/fd-plugins/: CMakeLists.txt  README.md
contrib/fd-plugins/mariadb-dump/: README.md  nqrustbackup-fd-mariadb-dump.py
contrib/fd-plugins/nqrustbackup_elasticsearch/: NQRustBackupFdPluginElasticsearch.py  README.md  nqrustbackup-fd-elasticsearch.py
contrib/fd-plugins/nqrustbackup_mysql_dump/: NQRustBackupFdMySQLclass.py  README.md  __init__.py
contrib/fd-plugins/nqrustbackup_option_example/: NQRustBackupFdPluginFileInteract.py  README.md  __init__.py
contrib/fd-plugins/nqrustbackup_tasks/: NQRustBackupFdTaskClass.py  README.md
contrib/fd-plugins/nqrustbackup_tasks/mariadb/: NQRustBackupFdMariaDBClass.py  README.md  __init__.py
contrib/fd-plugins/nqrustbackup_tasks/mysql/: NQRustBackupFdMySQLClass.py  README.md  __init__.py
contrib/fd-plugins/nqrustbackup_tasks/oracle/: NQRustBackupFdOracleClass.py  README.md  __init__.py
contrib/fd-plugins/nqrustbackup_tasks/pgsql/: NQRustBackupFdPgSQLClass.py  README.md  __init__.py
contrib/fd-plugins/nqrustbackup_tasks/xenserver/: NQRustBackupFdXenServerClass.py  README.md  __init__.py
contrib/fd-plugins/openvz7/: NQRustBackupFdPluginVz7CtFs.py  README.md  nqrustbackup-fd-vz7_ct_fs.py
installer/: Cargo.toml  README.md
installer/src/: app.rs  main.rs  theme.rs
installer/src/installer/: config.rs  database.rs  deps.rs  executor.rs  mod.rs  preflight.rs  roundtrip.rs  services.rs  source.rs  tls.rs  verify.rs  webui.rs
installer/src/ui/: mod.rs
installer/src/ui/screens/: complete.rs  config_screen.rs  error.rs  mod.rs  preflight.rs  profile_select.rs  progress.rs  source_select.rs  verify.rs  welcome.rs
installer/src/ui/widgets/: checklist.rs  log_viewer.rs  phase_progress.rs  status_bar.rs
(+1591 files in other folders)
